<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/fixtures"
        android:icon="@drawable/ic_event"
        android:title="@string/fixtures" />
    <item
        android:id="@+id/teams"
        android:icon="@drawable/ic_group"
        android:title="@string/teams" />
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_remove_red_eye"
        android:title="@string/ocrfc" />

    <item
        android:id="@+id/leagues"
        android:icon="@drawable/ic_baseline_format_list_numbered_24"
        android:title ="@string/leagues" />
    <item
        android:id="@+id/members"
        android:icon="@drawable/ic_baseline_perm_contact_calendar_24"
        android:title ="@string/members" />

</menu>