<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:id="@+id/relLayout1"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Name"
                    android:textSize="16sp"
                    android:paddingLeft="5dp"
                    android:paddingStart="5dp"
                    android:paddingRight="5dp"
                    android:paddingEnd="5dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/relLayout2"
                android:layout_below="@+id/relLayout1">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/edit_name"
                    android:inputType="textNoSuggestions"
                    android:id="@+id/editFistName"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:id="@+id/relLayout3"
                android:layout_marginTop="30dp"
                android:layout_below="@id/relLayout2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/AkaPlainText"
                    android:textSize="16sp"
                    android:paddingLeft="5dp"
                    android:paddingStart="5dp"
                    android:paddingRight="5dp"
                    android:paddingEnd="5dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/relLayout4"
                android:layout_below="@+id/relLayout3">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/edit_nickname"
                    android:inputType="textNoSuggestions"
                    android:id="@+id/editNickname"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:id="@+id/relLayout5"
                android:layout_marginTop="30dp"
                android:layout_below="@id/relLayout4">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/EmailPlainText"
                    android:textSize="16sp"
                    android:paddingLeft="5dp"
                    android:paddingStart="5dp"
                    android:paddingRight="5dp"
                    android:paddingEnd="5dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/relLayout6"
                android:layout_below="@+id/relLayout5">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/edit_email"
                    android:inputType="textEmailAddress"
                    android:id="@+id/editEmail" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:id="@+id/relLayout7"
                android:layout_marginTop="30dp"
                android:layout_below="@id/relLayout6">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/MobileNumber"
                    android:textSize="16sp"
                    android:paddingLeft="5dp"
                    android:paddingStart="5dp"
                    android:paddingRight="5dp"
                    android:paddingEnd="5dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/relLayout8"
                android:layout_below="@+id/relLayout7">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/edit_mobile_number"
                    android:inputType="numberSigned"
                    android:id="@+id/editMobileNumber"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:id="@+id/relLayout9"
                android:layout_marginTop="30dp"
                android:layout_below="@id/relLayout8">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/preferred_position"
                    android:textSize="16sp"
                    android:paddingLeft="5dp"
                    android:paddingStart="5dp"
                    android:paddingRight="5dp"
                    android:paddingEnd="5dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/relLayout10"
                android:layout_below="@+id/relLayout9">

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:id="@+id/PreferredPosition" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:id="@+id/relLayout11"
                android:layout_marginTop="30dp"
                android:layout_below="@id/relLayout10">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/second_choice_position"
                    android:textSize="16sp"
                    android:paddingLeft="5dp"
                    android:paddingStart="5dp"
                    android:paddingRight="5dp"
                    android:paddingEnd="5dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/relLayout12"
                android:layout_below="@+id/relLayout11">

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:id="@+id/SecondPosition" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:id="@+id/relLayout13"
                android:layout_marginTop="30dp"
                android:layout_below="@id/relLayout12">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/third_choice_position"
                    android:textSize="16sp"
                    android:paddingLeft="5dp"
                    android:paddingStart="5dp"
                    android:paddingRight="5dp"
                    android:paddingEnd="5dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/relLayout14"
                android:layout_below="@+id/relLayout13">

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:id="@+id/ThirdPosition" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:id="@+id/relLayout15"
                android:layout_marginTop="30dp"
                android:layout_below="@id/relLayout14"
                android:layout_centerHorizontal="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_changes"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/changeProfileBtn"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:id="@+id/relLayout16"
                android:layout_marginTop="30dp"
                android:layout_below="@id/relLayout15"
                android:layout_centerHorizontal="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/LogOutBtn"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/logoutBtn" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:id="@+id/relLayout17"
                android:layout_marginTop="30dp"
                android:layout_below="@id/relLayout16"
                android:layout_centerHorizontal="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_account"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/deleteAccount" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:id="@+id/relLayout18"
                android:layout_marginTop="30dp"
                android:layout_below="@id/relLayout17"
                android:layout_centerHorizontal="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/step_down_as_admin"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/removeAdmin" />

            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>

</merge>