<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark_blue_background"
    tools:context=".profile.Register">

    <TextView
        android:id="@+id/OC_Rugby_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oc_rugby"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042" />

    <EditText
        android:id="@+id/First_Name_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/FirstNamePlainText"
        android:inputType="textPersonName"
        android:textColor="@android:color/holo_orange_light"
        android:textColorHint="@android:color/holo_orange_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/OC_Rugby_TextView" />

    <EditText
        android:id="@+id/Surname_editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/SurnamePlainText"
        android:inputType="textPersonName"
        android:textColor="@android:color/holo_orange_light"
        android:textColorHint="@android:color/holo_orange_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/First_Name_editText" />

    <EditText
        android:id="@+id/Email_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/EmailPlainText"
        android:inputType="textPersonName"
        android:textColor="@android:color/holo_orange_light"
        android:textColorHint="@android:color/holo_orange_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Surname_editText2" />

    <EditText
        android:id="@+id/Password_editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/PasswordPlainText"
        android:inputType="textPersonName"
        android:password="true"
        android:textColor="@android:color/holo_orange_light"
        android:textColorHint="@android:color/holo_orange_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email_editText" />

    <EditText
        android:id="@+id/Confirm_Password_editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/ConfirmPasswordPlainText"
        android:inputType="textPersonName"
        android:password="true"
        android:textColor="@android:color/holo_orange_light"
        android:textColorHint="@android:color/holo_orange_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password_editText2" />

    <Button
        android:id="@+id/SignUpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/SignUpBtn"
        android:textColor="@color/SignUpBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Confirm_Password_editText5"
        />

    <TextView
        android:id="@+id/LoginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="Already registered? Login here"
        android:textColor="@android:color/holo_orange_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUpBtn"
        app:layout_constraintVertical_bias="0.276" />

    <ProgressBar
        android:id="@+id/SignUpprogressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="185dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>